Fixed vertical alignment in the header

--- a/web/css/source/_absolute.less
+++ b/web/css/source/_absolute.less
@@ -75,7 +75,6 @@ a:hover { transition: all @transition-time__m; border-color: @color-white-dark-s
     }
     .links {
         float: right;
-        margin-top: 7px;
         li {
             float: left;
             list-style-type: none;
